samples/_failures_safe/1761622611_d1d77c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a853e3b.c: In function ‘main’:
./samples/SAFE/__tmp_0a853e3b.c:142:12: error: missing terminating " character
  142 |     printf("\nSecond matrix
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a853e3b.c:142:5: error: expected expression at end of input
  142 |     printf("\nSecond matrix
      |     ^~~~~~
./samples/SAFE/__tmp_0a853e3b.c:142:5: error: expected declaration or statement at end of input
